# oggopus-embedded

./: .gitmodules  COPYING  Cargo.toml  README.md
example/: Cargo.toml
example-linux/: COPYING  Cargo.toml  README.md
example-linux/src/: main.rs
example-rp2040/: COPYING  Cargo.toml  README.md  benchmark.py  build.rs
example-rp2040/src/: .gitignore  main.rs  tone_440_12k.opus  tone_440_16k.opus  tone_440_24k.opus  tone_440_32k.opus  tone_440_48k.opus  tone_440_64k.opus  tone_440_8k.opus
example/src/: main.rs
oggopus-embedded/: Cargo.toml  README.md
oggopus-embedded/src/: container.rs  lib.rs  opus.rs
oggopus-embedded/src/test/: mono.opus  opus.data  stereo.opus
opus-embedded/: Cargo.toml  README.md
opus-embedded/src/: lib.rs
opus-embedded/sys/: COPYING  Cargo.toml  README.md  build.rs
opus-embedded/sys/src/: custom_support.h  decoder.h  lib.rs
src/: main.rs  oggopus.rs
