[package]
name = "example-linux"
repository = "https://github.com/Tomin1/oggopus-embedded"
description = "Example for Linux to demonstrate oggopus-embedded"
version = "0.1.2"
license = "BSD-3-Clause"
edition = "2021"
publish = false

[dependencies]
alsa = "0.9.1"
oggopus-embedded = { path = "../oggopus-embedded", version = "0.1.2" }
opus-embedded = { path = "../opus-embedded", version = "0.1.2", features = ["stereo"] }

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu"]
