[package]
name = "opus-embedded"
repository = "https://github.com/Tomin1/oggopus-embedded"
description = "Decoding of Opus audio without allocation"
keywords = ["opus", "no_std", "bindings", "audio"]
categories = ["api-bindings", "embedded", "multimedia::audio", "no-std::no-alloc"]
version = "0.1.2"
license = "BSD-3-Clause"
edition = "2021"
rust-version = "1.85.1"

[features]
default = ["optimize_libopus"]
optimize_libopus = ["opus-embedded-sys/optimize_libopus"]
stereo = ["opus-embedded-sys/stereo"]

[dependencies]
az = "1.2.1"
num_enum = { version = "0.7", default-features = false }
opus-embedded-sys = { path = "sys", version = "0.1.2", default-features = false }

[package.metadata.docs.rs]
all-features = true
default-target = "thumbv6m-none-eabi"
targets = ["thumbv6m-none-eabi", "x86_64-unknown-linux-gnu"]
