[package]
name = "opus-embedded-sys"
repository = "https://github.com/Tomin1/oggopus-embedded"
description = "Bindings to libopus for decoding Opus audio on embedded systems"
keywords = ["bindings", "opus", "no_std", "audio"]
categories = ["embedded", "external-ffi-bindings", "no-std::no-alloc"]
version = "0.1.2"
license = "BSD-3-Clause"
edition = "2021"

[features]
default = ["optimize_libopus"]
optimize_libopus = []
stereo = []

[dependencies]

[build-dependencies]
autotools = "0.2"
bindgen = "0.71.0"
doxygen-bindgen = "0.1.3"
regex = "1.11.1"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["thumbv6m-none-eabi", "x86_64-unknown-linux-gnu"]
